tests/NormalTests/paczka1/fuzzy1/21288599.err
Error in line 2: x9Og A686 92,8
Error in line 1: AJP220d A374 11,3
Error in line 4: AJP220d S185 35,4
Error in line 6: AJP220d A374 25,1
Error in line 14: x9Og A686 5,7
Error in line 15: x9Og S638 85,9
